[project]
name = "smol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.7.0",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "google-genai>=1.16.1",
    "html5lib>=1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pypdf>=5.5.0",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "smolagents[litellm,toolkit]>=1.16.1",
]
